oooook webassembly wiring is done

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,13 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 cfg-if = "1"
 derive_more = { version = "0.99", default-features = false, features = ["display"] }
+serde = { version = "1.0.80", features = ["derive"] }
+serde_derive = "^1.0.59"
+serde_json = "1.0"
+
 
 [target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
-wasm-bindgen = { version = "0.2"}
+wasm-bindgen = { version = "0.2", features = ["serde-serialize"]   }
 js-sys = { version = "0.3", optional = true }
 web-sys = { version = "0.3", features = ["Window", "Performance", "PerformanceTiming", "Headers", "Request", "RequestInit", "RequestMode", "Response",] }
 wasm-bindgen-futures = "0.4.34"
