--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,9 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 cfg-if = "1"
 derive_more = { version = "0.99", default-features = false, features = ["display"] }
-serde = { version = "1.0.80", features = ["derive"] }
-serde_derive = "^1.0.59"
 serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde-wasm-bindgen = "0.4"
 
 
 [target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
