--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ serde-wasm-bindgen = "0.4"
 
 [target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"]   }
-js-sys = { version = "0.3", optional = true }
+js-sys = { version = "0.3"}
 web-sys = { version = "0.3", features = ["Window", "Performance", "PerformanceTiming", "Headers", "Request", "RequestInit", "RequestMode", "Response",] }
 wasm-bindgen-futures = "0.4.34"
 
